--- a/html/assets/css/overrides.css
+++ b/html/assets/css/overrides.css
@@ -2,3 +2,42 @@
     font-size: 22px !important;
     font-family: Courier, sans-serif;!important;
 }
+
+#rails {
+    color: white;!important;
+    background-color: purple;
+}
+
+#ruby {
+    color: white;!important;
+    background-color: red;
+}
+
+#js {
+    color: white;!important;
+    background-color: green;
+}
+
+#bootstrap {
+    color: white;!important;
+    background-color: dodgerblue;
+}
+
+#droplet {
+    color: white;!important;
+    background-color: darkblue;
+}
+
+.tag {
+    border-radius: 15px;
+    padding: 1.5% 4% 1.5% 4%;
+}
+
+#websiteButton {
+    background-color: dodgerblue;
+    margin-right: 2%;
+}
+
+#githubButton {
+    background-color: grey;!important;
+}
